# phylogenetics

./: Gen.hs  Types.hs  phylogenetics.cabal  plots.R  stack.yaml
app/: Main.hs
bench/: bench.hs
src/Phylogenetics/: Gen.hs  Likelihood.hs  Likelihood_v1.hs  Likelihood_v2.hs  Optimization.hs  Types.hs
src/Phylogenetics/Opt/: GradientDescent.hs
tests/: NaiveGradient.hs  NaiveLikelihood.hs  test.hs
