name:                phylogenetics
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    Phylogenetics.Types
    Phylogenetics.Gen
    Phylogenetics.Likelihood
  build-depends:       base, vector, random-fu, ad, containers, mtl,
                       tuples-homogenous-h98, hmatrix
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables, RecordWildCards, NamedFieldPuns,
                       NumDecimals, ViewPatterns, BangPatterns, DerivingStrategies,
                       FlexibleInstances, MultiParamTypeClasses,
                       GeneralizedNewtypeDeriving, RankNTypes, OverloadedLabels,
                       TemplateHaskell, DataKinds, TypeFamilies,
                       UndecidableInstances, DeriveFunctor, DeriveFoldable,
                       DeriveTraversable, DeriveAnyClass, DeriveGeneric,
                       OverloadedStrings, MultiWayIf, LambdaCase,
                       FlexibleContexts, TupleSections

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  build-depends:
      base >= 4
    , phylogenetics
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-expected-failure
    , QuickCheck
    , hmatrix
