name:                phylogenetics
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    Phylogenetics.Types
    Phylogenetics.Gen
    Phylogenetics.Likelihood_v1
    Phylogenetics.Likelihood_v2
  build-depends:       base, vector, random-fu, ad, containers, mtl,
                       tuples-homogenous-h98, hmatrix, log-domain
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  ScopedTypeVariables, RecordWildCards, NamedFieldPuns,
                       NumDecimals, ViewPatterns, BangPatterns, DerivingStrategies,
                       FlexibleInstances, MultiParamTypeClasses,
                       GeneralizedNewtypeDeriving, RankNTypes, OverloadedLabels,
                       TemplateHaskell, DataKinds, TypeFamilies,
                       UndecidableInstances, DeriveFunctor, DeriveFoldable,
                       DeriveTraversable, DeriveAnyClass, DeriveGeneric,
                       OverloadedStrings, MultiWayIf, LambdaCase,
                       FlexibleContexts, TupleSections

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    test.hs
  other-modules:
    NaiveLikelihood
  ghc-options:
    -Wall -Wno-orphans -Wno-name-shadowing -threaded
  build-depends:
      base >= 4
    , phylogenetics
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-expected-failure
    , QuickCheck
    , hmatrix
    , containers
    , vector
    , tuples-homogenous-h98
    , log-domain
  default-extensions:  ScopedTypeVariables, RecordWildCards, NamedFieldPuns,
                       NumDecimals, ViewPatterns, BangPatterns, DerivingStrategies,
                       FlexibleInstances, MultiParamTypeClasses,
                       GeneralizedNewtypeDeriving, RankNTypes, OverloadedLabels,
                       TemplateHaskell, DataKinds, TypeFamilies,
                       UndecidableInstances, DeriveFunctor, DeriveFoldable,
                       DeriveTraversable, DeriveAnyClass, DeriveGeneric,
                       OverloadedStrings, MultiWayIf, LambdaCase,
                       FlexibleContexts, TupleSections

benchmark bench
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    bench
  main-is:
    bench.hs
  ghc-options:
    -Wall -Wno-orphans -Wno-name-shadowing -threaded
  build-depends:
      base >= 4
    , phylogenetics
    , criterion
    , random-fu
  default-extensions:  ScopedTypeVariables, RecordWildCards, NamedFieldPuns,
                       NumDecimals, ViewPatterns, BangPatterns, DerivingStrategies,
                       FlexibleInstances, MultiParamTypeClasses,
                       GeneralizedNewtypeDeriving, RankNTypes, OverloadedLabels,
                       TemplateHaskell, DataKinds, TypeFamilies,
                       UndecidableInstances, DeriveFunctor, DeriveFoldable,
                       DeriveTraversable, DeriveAnyClass, DeriveGeneric,
                       OverloadedStrings, MultiWayIf, LambdaCase,
                       FlexibleContexts, TupleSections
